# Sanskrit

./: .gitignore  Cargo.toml  Dockerfile  README.md  devcontainer.json  sp1_install.sh  sp1_prepare.sh
sanskrit_bench/: Cargo.toml
sanskrit_bench/src/: bench.rs  crypto.rs  externals.rs  lib.rs  main.rs
sanskrit_bench/src/bench/opcodes/: _let.rs  add.rs  and.rs  call.rs  div.rs  eq.rs  get.rs  gt.rs  gte.rs  id.rs  join_hash.rs  lt.rs  lte.rs  mul.rs  not.rs  op.rs  or.rs  pack.rs  plain_hash.rs  (+9 more)
sanskrit_common/: Cargo.toml
sanskrit_common/src/: arena.rs  capabilities.rs  encoding.rs  errors.rs  hashing.rs  lib.rs  linear_stack.rs  model.rs  store.rs  supplier.rs  utils.rs
sanskrit_compile/: Cargo.toml
sanskrit_compile/src/: collector.rs  compacting.rs  compiler.rs  externals.rs  gas_native  gas_table.rs  lib.rs  limiter.rs
sanskrit_core/: Cargo.toml
sanskrit_core/src/: accounting.rs  context.rs  lib.rs  loader.rs  resolver.rs  utils.rs
sanskrit_core/src/model/: bitsets.rs  efficency.rs  linking.rs  mod.rs  provider.rs  resolved.rs
sanskrit_core/src/native/: base.rs  fun.rs  mod.rs
sanskrit_default_externals/: Cargo.toml
sanskrit_default_externals/src/: _unsafe.rs  crypto.rs  data.rs  eddsa.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  iX.rs  ids.rs  lib.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs  uX.rs
sanskrit_deploy/: Cargo.toml
sanskrit_deploy/src/: code_type_checker.rs  lib.rs  linear_stack.rs  linear_type_stack.rs  native.rs  validate.rs
sanskrit_derive/: Cargo.toml
sanskrit_derive/src/: lib.rs
sanskrit_interpreter/: Cargo.toml
sanskrit_interpreter/src/: externals.rs  hashing.rs  interpreter.rs  lib.rs  model.rs  value_encoding.rs
sanskrit_local_server/: Cargo.toml  build.rs
sanskrit_local_server/src/: compiler.rs  externals.rs  main.rs  manager.rs  parser.lalrpop  parser_model.rs
sanskrit_local_server/token/: fixedSupplyToken.sans  helper.sans  mint.txt  purse.sans  purse.txt  token.sans  transfer.txt
sanskrit_local_server/wasm/: build.bat  gas_cost.toml  sanskrit_wasm_deploy_compile.wasm  sanskrit_wasm_deploy_compile_gas.wasm
sanskrit_pallet/: Cargo.toml
sanskrit_pallet/src/: chain_store.rs  lib.rs
sanskrit_preloaded_validation/: Cargo.toml
sanskrit_preloaded_validation/src/: lib.rs  pre_load_store.rs
sanskrit_runtime/: Cargo.toml
sanskrit_runtime/src/: compute.rs  descriptors.rs  direct_stored.rs  elem_store.rs  interpreter.rs  lib.rs  model.rs  native.rs  script_interpreter.rs  script_stack.rs  system.rs  type_builder.rs  verify.rs
sanskrit_test/: Cargo.toml
sanskrit_test/scripts/: data.sans  ecdsa.sans  errors.sans  ids.sans  intI128.sans  intI16.sans  intI32.sans  intI64.sans  intI8.sans  intU128.sans  intU16.sans  intU32.sans  intU64.sans  intU8.sans  system.sans  testFailAdtApply.sans  testFailAdtApply2.sans  testFailAdtConstraintApply.sans  testFailAdtConstraintApply2.sans  testFailAdtPhantomApply.sans  testFailAdtPhantomUse.sans  testFailAdtWrongCapsEmbed.sans  testFailAdtWrongCapsEmbed2.sans  testFailAdtWrongCapsIdentity.sans  testFailAdtWrongRecCapsCopy.sans  testFailAdtWrongRecCapsCopyInfer.sans  testFailAdtWrongRecCapsCopyRemote.sans  testFailAdtWrongRecCapsDrop.sans  testFailAdtWrongRecCapsDropInfer.sans  testFailAdtWrongRecCapsDropRemote.sans  testFailAdtWrongRecCapsPersist.sans  testFailAdtWrongRecCapsPersistInfer.sans  testFailAdtWrongRecCapsPersistRemote.sans  testFailBorrowBorrowed.sans  testFailBorrowBorrowed2.sans  testFailBorrowBorrowed3.sans  testFailBorrowImageField.sans  testFailBorrowImageField2.sans  testFailBorrowImageField3.sans  testFailBorrowImageSwitch.sans  (+187 more)
sanskrit_test/src/: externals.rs  generator.rs  lib.rs  limit_tests.rs  linear_type_stack_test.rs  script_test.rs  standalone_wasm_test.rs  transaction_test.rs
sanskrit_test/src/gas_bench/: _let.rs  add.rs  and.rs  arith.rs  bit_ops.rs  cmp.rs  concat.rs  copy.rs  derive.rs  div.rs  env.rs  eq.rs  gen_unique.rs  get.rs  get_bit.rs  gt.rs  gte.rs  hash.rs  invoke.rs  lit.rs  lt.rs  lte.rs  mod.rs  mul.rs  not.rs  or.rs  pack.rs  plain_hash.rs  script_lit.rs  set_bit.rs  sig.rs  sub.rs  switch.rs  to.rs  to_data.rs  try.rs  unpack.rs  xor.rs
sanskrit_test/system/: alt.sans  bool.sans  data.sans  ids.sans  intI16.sans  intI32.sans  intI64.sans  intI8.sans  intU128.sans  intU16.sans  intU64.sans  intU8.sans  system.hash  system.sans  tuple.sans  unsafe.sans
sanskrit_test/transactions/: BaseOps.sans  BitOps.sans  CapCheckTypes.sans  CastOps.sans  CompareAndHashOps.sans  ErrorOps.sans  Helpers.sans  IndexOps.sans  Math.sans  SomeFunctions.sans  SomeTypes.sans  alt.sans  bool.sans  data.sans  ecdsa.sans  history.txt  ids.sans  intI128.sans  intI16.sans  intI32.sans  intI64.sans  intI8.sans  intU128.sans  intU16.sans  intU32.sans  intU64.sans  intU8.sans  simple.txt  system.sans  testFailBorrowBorrowed.txt  testFailBorrowBorrowed2.txt  testFailBorrowBorrowed3.txt  testFailBorrowMoved.txt  testFailBorrowMoved2.txt  testFailBorrowMoved3.txt  testFailBorrowUnpack.txt  testFailBuildRecCopy.txt  testFailBuildRecDrop.txt  testFailBuildRecPersist.txt  testFailCapUnpack.txt  (+107 more)
sanskrit_test/wasm/: sanskrit_wasm_deploy.wasm  sanskrit_wasm_deploy_gas.wasm  sanskrit_wasm_deploy_gas_max.wasm  sanskrit_wasm_deploy_gas_new.wasm  sanskrit_wasm_deploy_gas_opt.wasm
sanskrit_test_script_compiler/: Cargo.toml
sanskrit_test_script_compiler/src/: environment.rs  generate.rs  lib.rs  model.rs  module_parser.lalrpop  native.rs  parser.lalrpop  script.rs  transaction.rs  transaction_parser.lalrpop
sanskrit_wasm_deploy/: Cargo.toml
sanskrit_wasm_deploy/src/: lib.rs
sanskrit_wasm_deploy_compile/: Cargo.toml
sanskrit_wasm_deploy_compile/src/: lib.rs  store.rs
sanskrit_wasm_runner/: Cargo.toml
sanskrit_wasm_runner/src/: main.rs
sanskrit_wasm_runner/wasm/: sanskrit_wasm_deploy_compile.wasm  sanskrit_wasm_deploy_compile_gas.wasm
sanskrit_zero_validator/: Cargo.toml  build.rs  exectute.sh  prove.sh  trace.sh  track.sh
sanskrit_zero_validator/src/: main.rs
sanskrit_zero_validator_guest/: Cargo.toml
sanskrit_zero_validator_guest/src/: main.rs
(+484 files in other folders)
