[workspace]
members = [
        "sanskrit_common",
        "sanskrit_derive",
        "sanskrit_core",
        "sanskrit_deploy",
        "sanskrit_interpreter",
        "sanskrit_runtime",
        "sanskrit_compile",
        "sanskrit_memory_store",
        "sanskrit_sled_store",
        "sanskrit_local_server",
        "sanskrit_default_externals",
        "sanskrit_preloaded_validation",
        "sanskrit_validator",
        #"sanskrit_wasm_deploy_compile", #Must be compiled to the wasm target - fails otherwise
]

[profile.release]
panic = "abort"
#lto = "fat"
lto = "thin"
debug = false
opt-level = 3
