[package]
name = "sanskrit_common"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[features]
default = ["std", "string_errors"]
std = []
string_errors = []
panic_errors = []

[dependencies]
#blake3 = {  version = "=1.5.0", default-features = false }
sha2 = {  version = "=0.10.8", default-features = false }
byteorder = { version = "1.5.0", features = ["i128"], default-features = false }
arrayref = { version = "0.3.9", default-features = false }

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"