[package]
name = "sanskrit_compile"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
#provides advanced features that are not described in thesis
advanced = ["dynamic_gas", "sanskrit_interpreter/advanced"]
#not tested yet
dynamic_gas = ["sanskrit_interpreter/dynamic_gas"]
std = []

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"
default-features=false

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"

