[package]
name = "sanskrit_core"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
multi-thread = ["spin"]
std = []

[dependencies]
spin = { version = "0.9.8", optional = true, default-features = false, features = ["spin_mutex"]}

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"