[package]
name = "sanskrit_deploy"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[features]
default = ["std"]
std = []
test = []


[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"