[package]
name = "sanskrit_deploy"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []
#provides advanced features that are not described in thesis
#Todo: make forward_type_ref & forward_fun_ref default
advanced = ["forward_type_ref"]
forward_type_ref = []
test = []

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"
default-features = false