[package]
name = "sanskrit_derive"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.37"
proc-macro2 = "1.0.86"

[dependencies.syn]
version = "2.0.77"
features = ["full", "visit", "extra-traits"]
