[package]
name = "sanskrit_interpreter"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["std"]
std = []

[dependencies]
byteorder = { version = "1.3.4", features = ["i128"], default-features = false }
ed25519-dalek = "1.0.1"
sha2 = "0.9.1"
rand = "0.7.3"

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"
