[package]
name = "sanskrit_interpreter"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'

[features]
default = ["std"]
#provides advanced features that are not described in thesis
advanced = ["dynamic_gas"]
#not tested yet
dynamic_gas = []
std = []

[dependencies]
byteorder = { version = "1.5.0", features = ["i128"], default-features = false }
ed25519-dalek = { version = "2.1.1", default-features = false}
sha2 = { version = "0.11.0-pre.1", default-features = false }
rand = { version = "0.8.5", default-features = false }

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"
