[package]
name = "sanskrit_local_server"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = { version =  "0.19.1", features = ["lexer"] }

[features]
default = ["std", "wasm"]
std = []
wasm = ["wasmer"]
embedded = ["sanskrit_runtime/deployer", "sanskrit_deploy", "sanskrit_compile"]

[dependencies]
regex = "1.4.1"
lalrpop-util = "0.19.1"
rustyline = "6.3.0"
ed25519-dalek = "1.0.1"
sha2 = "0.9.1"
rand = "0.7.3"
sled = "0.34.4"
hex = "0.4.2"
arrayref = "0.3.6"
byteorder = { version = "1.3.4", features = ["i128"], default-features = false }
lazy_static = "1.4.0"
wasmer = { version = "3.1.1", optional = true }
fluid-let = "0.1.0"

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"
optional = true

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
optional = true

[dependencies.sanskrit_runtime]
path = "../sanskrit_runtime"
version = "0.1.0"

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"

[dependencies.sanskrit_sled_store]
path = "../sanskrit_sled_store"
version = "0.1.0"

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"
