[package]
name = "sanskrit_local_server"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.20.2", features = ["lexer"] }

[features]
default = ["std"]
std = []
advanced = ["dynamic_gas", "forward_type_ref", "sanskrit_compile/advanced", "sanskrit_deploy/advanced", "sanskrit_runtime/advanced", "sanskrit_interpreter/advanced"]
#needs to change how switches and tries work
dynamic_gas = ["sanskrit_compile/dynamic_gas","sanskrit_runtime/dynamic_gas", "sanskrit_interpreter/dynamic_gas"]
forward_type_ref = ["sanskrit_deploy/forward_type_ref","sanskrit_runtime/forward_type_ref"]

[dependencies]
regex = "1.10.4"
lalrpop-util = "0.20.2"
rustyline = "14.0.0"
ed25519-dalek = { version = "2.1.1" , features = ["rand_core"]}
sha2 = "0.10.8"
rand = "0.8.5"
sled = "0.34.7"
hex = "0.4.3"
arrayref = "0.3.7"
byteorder = { version = "1.5.0", features = ["i128"], default-features = false }
lazy_static = "1.4.0"
fluid-let = "1.0.0"
rand_chacha = "0.3.1"

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"
default-features=false

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
default-features=false

[dependencies.sanskrit_runtime]
path = "../sanskrit_runtime"
version = "0.1.0"
default-features=false
features = ["deployer"]

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"
default-features=false

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"

[dependencies.sanskrit_sled_store]
path = "../sanskrit_sled_store"
version = "0.1.0"

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"
