[package]
name = "sanskrit_preloaded_validation"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[profile.release]
panic = "abort"
lto = true
opt-level = 3