[package]
name = "sanskrit_runtime"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[features]
default = ["std"]
std = []

[dependencies]
byteorder = { version = "1.3.4", features = ["i128"], default-features = false }
arrayref = "0.3.6"
num-traits = { version = "0.2.14", default-features = false}

# ed25519-dalek = "0.8.1"
# sha2 = "0.7.0"

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"