[package]
name = "sanskrit_runtime"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[features]
default = ["std", "deployer", "sanskrit_deploy", "sanskrit_compile"]
#provides advanced features that are not described in thesis
advanced = ["dynamic_gas", "forward_type_ref", "sanskrit_deploy/advanced", "sanskrit_compile/advanced", "sanskrit_interpreter/advanced"]
#not tested yet
dynamic_gas = ["sanskrit_compile/dynamic_gas", "sanskrit_interpreter/dynamic_gas"]
forward_type_ref = ["sanskrit_deploy/forward_type_ref"]
std = []
deployer = ["sanskrit_deploy", "sanskrit_compile"]

[dependencies]
byteorder = { version = "1.5.0", features = ["i128"], default-features = false }
arrayref = "0.3.9"
num-traits = { version = "0.2.19", default-features = false}

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
optional = true
default-features = false

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"
optional = true
default-features = false

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_derive]
path = "../sanskrit_derive"
version = "0.1.0"

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"