[package]
name = "sanskrit_test"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[build-dependencies]
lalrpop = "0.16.2"

[dependencies]
ed25519-dalek = "0.9.1"
sha2 = "0.7.0"
rand = "0.6.1"
wasmi = "0.4.5"
wasmer-runtime = "0.4.2"
lazy_static = "1.4.0"

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"

[dependencies.sanskrit_test_script_compiler]
path = "../sanskrit_test_script_compiler"
version = "0.1.0"

[dependencies.sanskrit_memory_store]
path = "../sanskrit_memory_store"
version = "0.1.0"

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
features=["test", "std"]

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"

[dependencies.sanskrit_runtime]
path = "../sanskrit_runtime"
version = "0.1.0"