[package]
name = "sanskrit_test_script_compiler"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[build-dependencies]
lalrpop = "0.16.2"

[dependencies]
arrayref = "0.3.5"
lalrpop-util = "0.16.2"
regex = "0.2.1"
byteorder = { version = "1.2.6", features = ["i128"]}
hex = "0.3.2"
itertools = "0.8.0"
ed25519-dalek = "0.8.1"
sha2 = "0.7.0"
rand = "0.6.1"


[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"

[dependencies.sanskrit_memory_store]
path = "../sanskrit_memory_store"
version = "0.1.0"

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"

[dependencies.sanskrit_runtime]
path = "../sanskrit_runtime"
version = "0.1.0"