[package]
name = "sanskrit_test_script_compiler"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]
build = "build.rs"

[build-dependencies]
lalrpop = { version =  "0.19.1", features = ["lexer"] }

[dependencies]
arrayref = "0.3.6"
lalrpop-util = "0.20.2"
regex = "1.4.1"
byteorder = { version = "1.3.4", features = ["i128"]}
hex = "0.4.2"
itertools = "0.12.1"
ed25519-dalek = "2.1.1"
sha2 = "0.10.8"
rand = "0.8.5"


[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"

[dependencies.sanskrit_memory_store]
path = "../sanskrit_memory_store"
version = "0.1.0"

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"

[dependencies.sanskrit_runtime]
path = "../sanskrit_runtime"
version = "0.1.0"
