[package]
name = "sanskrit_wasm_deploy_compile"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[lib]
crate-type = ["cdylib"]
name = "sanskrit_wasm_deploy_compile"
path = "src/lib.rs"

[dependencies]
lazy_static = "1.3.0"

[dependencies.sanskrit_deploy]
path = "../sanskrit_deploy"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_compile]
path = "../sanskrit_compile"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_memory_store]
path = "../sanskrit_memory_store"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_core]
path = "../sanskrit_core"
version = "0.1.0"
default-features = false

[dependencies.sanskrit_interpreter]
path = "../sanskrit_interpreter"
version = "0.1.0"
default-features = false


[profile.release]
panic = "abort"
lto = true
opt-level = "z"