[package]
name = "sanskrit_wasm_runner"
version = "0.1.0"
authors = ["tawaren <markus.knecht85@gmail.com>"]

[dependencies]
wasmer = "3.1.1"
#wasmer-llvm-backend = "0.17.1"
fluid-let = "0.1.0"

[dependencies.sanskrit_memory_store]
path = "../sanskrit_memory_store"
version = "0.1.0"

[dependencies.sanskrit_common]
path = "../sanskrit_common"
version = "0.1.0"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
